# scan_table

./: .gitignore
opencv_server/: CMakeLists.txt  rebuild.sh  server.cpp
opencv_server/demo/: CMakeLists.txt  demo.cpp
server/: Gemfile  README.md
server/app/controllers/: home_controller.rb
server/app/models/: ai_discern.rb
server/app/views/home/: index.html.erb
server/app/views/layouts/: application.html.erb
server/config/: application.rb  secrets.yml
server/config/environments/: production.rb
